@@ -1,30 +1,32 @@
 #!/usr/bin/python
 #vim:set fileencoding=utf-8:
 #
-#      apt-listchanges - Show changelog entries between the installed versions
-#        of a set of packages and the versions contained in corresponding
-#        .deb files
+#   apt-listchanges - Show changelog entries between the installed versions
+#                     of a set of packages and the versions contained in
+#                     corresponding .deb files
 #
-#      Copyright (C) 2000-2002  Matt Zimmerman <mdz@debian.org>
+#   Copyright (C) 2000-2006  Matt Zimmerman  <mdz@debian.org>
+#   Copyright (C) 2006       Pierre Habouzit <madcoder@debian.org>
 #
-#      This program is free software; you can redistribute it and/or modify
-#      it under the terms of the GNU General Public License as published by
-#      the Free Software Foundation; either version 2 of the License, or
-#      (at your option) any later version.
+#   This program is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License as published by
+#   the Free Software Foundation; either version 2 of the License, or
+#   (at your option) any later version.
 #
-#      This program is distributed in the hope that it will be useful,
-#      but WITHOUT ANY WARRANTY; without even the implied warranty of
-#      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#      GNU General Public License for more details.
+#   This program is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#   GNU General Public License for more details.
 #
-#      You should have received a copy of the GNU General Public
-#      License along with this program; if not, write to the Free
-#      Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
-#      MA 02111-1307 USA
+#   You should have received a copy of the GNU General Public
+#   License along with this program; if not, write to the Free
+#   Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
+#   MA 02111-1307 USA
 #
 
 import sys
 import apt_pkg
+import locale
 import gettext
 import anydbm
 import commands
@@ -32,12 +34,13 @@ import commands
 sys.path += ['./apt-listchanges', '/usr/share/apt-listchanges']
 import apt_listchanges, DebianFiles, ALCConfig
 
-def main():
-    try:
-        _ = gettext.translation('apt-listchanges').lgettext
-    except IOError:
-        _ = lambda str: str
+locale.setlocale(locale.LC_ALL, '')
+try:
+    _ = gettext.translation('apt-listchanges').lgettext
+except IOError:
+    _ = lambda str: str
 
+def main():
     config = ALCConfig.ALCConfig()
     config.read('/etc/apt/listchanges.conf')
     debs = config.getopt(sys.argv)
