@@ -1,3 +1,28 @@
+#vim:set fileencoding=utf-8:
+#
+#   apt-listchanges - Show changelog entries between the installed versions
+#                     of a set of packages and the versions contained in
+#                     corresponding .deb files
+#
+#   Copyright (C) 2000-2006  Matt Zimmerman  <mdz@debian.org>
+#   Copyright (C) 2006       Pierre Habouzit <madcoder@debian.org>
+#
+#   This program is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License as published by
+#   the Free Software Foundation; either version 2 of the License, or
+#   (at your option) any later version.
+#
+#   This program is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#   GNU General Public License for more details.
+#
+#   You should have received a copy of the GNU General Public
+#   License along with this program; if not, write to the Free
+#   Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
+#   MA 02111-1307 USA
+#
+
 import re
 import sys, os, os.path
 import tempfile
@@ -6,12 +31,11 @@ import errno
 import glob
 import shutil
 
-import gettext, locale
+import gettext
 
 # TODO:
 # indexed lookups by package at least, maybe by arbitrary field
 
-locale.setlocale(locale.LC_ALL, '')
 try:
     _ = gettext.translation('apt-listchanges').lgettext
 except IOError:
