@@ -6,7 +6,8 @@ It is now maintained by :
   Matt Zimmerman  <mdz@debian.org>
 
 
-Copyright (C) 2001-2006  Matt Zimmerman <mdz@debian.org>
+Copyright (C) 2001-2006  Matt Zimmerman  <mdz@debian.org>
+Copyright (C) 2006       Pierre Habouzit <madcoder@debian.org>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
